--- a/app/modules/components/quote-panel-component.html
+++ b/app/modules/components/quote-panel-component.html
@@ -1,4 +1,7 @@
 <blockquote>
   {{quote}}
   by {{quoteAuthor}}
+
+  <label>Change author (inner)</label>
+  <input v-bind:value="quoteAuthor" v-on:input="$emit('update:quoteAuthor', $event.target.value)"></input>
 </blockquote>
