Basic scss scaffold

--- a/app/styles/base/_variables.scss
+++ b/app/styles/base/_variables.scss
@@ -7,3 +7,7 @@ $color-text-heading-primary: black;
 $color-text-heading-secondary: black;
 $color-text-button-primary: black;
 $color-text-button-secondary: black;
+
+
+$color-button-border-default: $color-white;
+$color-button-background-default: $color-white;
