--- a/app/modules/layouts/dashboard-layout.html
+++ b/app/modules/layouts/dashboard-layout.html
@@ -1,6 +1,5 @@
 <section class="dashboard-layout">
   <section class="sidebar-content">
     <navigation></navigation>
-  </section>
-  <router-view class="main-content"></router-view>
+  </section><router-view class="main-content"></router-view>
 </section>
