--- a/app/styles/base/_base.scss
+++ b/app/styles/base/_base.scss
@@ -2,6 +2,7 @@
 @import 'variables';
 @import 'typography';
 @import 'grid';
+@import 'layouts/layouts';
 
 @import 'components/buttons';
 @import 'components/inputs';
