--- a/app/styles/base/_base.scss
+++ b/app/styles/base/_base.scss
@@ -4,5 +4,6 @@
 @import 'grid';
 @import 'layouts/layouts';
 
+@import 'components/anchors';
 @import 'components/buttons';
 @import 'components/inputs';
