--- a/app/styles/base/components/_inputs.scss
+++ b/app/styles/base/components/_inputs.scss
@@ -1,3 +1,17 @@
-input {
-  padding: 0.2rem 0.25rem;
+.input-group {
+  margin-bottom: 1.5rem;
+  max-width: 100%;
+  input, select, textarea {
+    border: none;
+    border-radius: 5px;
+    font-size: 1.5rem;
+    padding: 0.5rem 1rem;
+    display: block;
+  }
+
+  label {
+    display: block;
+    font-weight: bold;
+    padding-bottom: 0.25rem;
+  }
 }
