Separate form inputs

--- a/app/styles/base/components/_inputs.scss
+++ b/app/styles/base/components/_inputs.scss
@@ -9,6 +9,11 @@
     display: block;
   }
 
+  select {
+    height: 3rem;
+    width: 100%;
+  }
+
   label {
     display: block;
     font-weight: bold;
