--- a/app/modules/base/components/text-input-component.html
+++ b/app/modules/base/components/text-input-component.html
@@ -2,6 +2,7 @@
   <label>{{label}}</label>
   <input v-bind:value="value"
          v-on:input="$emit('update:value', $event.target.value)"
+         v-bind:autocomplete="autocomplete"
          v-bind:placeholder="placeholder"
          v-bind:type="type"></input>
 </div>
