--- a/app/modules/base/components/address-input-component.html
+++ b/app/modules/base/components/address-input-component.html
@@ -4,5 +4,5 @@
   <text-input label="City" v-bind:value.sync="value.city" />
   <text-input label="State" v-bind:value.sync="value.region" />
   <country-input label="Country" v-bind:value.sync="value.country" />
-  <text-input label="Zip" v-bind:value.sync="value.postal" />
+  <zip-input label="Zip" v-bind:value.sync="value.postal" />
 </section>
