Avoid form submission

--- a/app/modules/base/components/embedded-form-component.html
+++ b/app/modules/base/components/embedded-form-component.html
@@ -8,5 +8,5 @@
   <br/>
   <label>field3 (child)</label><br/>
   <input v-model="value.field3"></input>
-  <button v-on:click="childReset">Child Reset</button>
+  <button v-on:click="childReset" type="button">Child Reset</button>
 </form>
