--- a/app/styles/base/components/_modals.scss
+++ b/app/styles/base/components/_modals.scss
@@ -7,15 +7,17 @@
   top: 0;
 
   .modal-wrapper {
-    background-color: white;
-    border-radius: 15px;
-    bottom: 10%;
     left: 15%;
     position: absolute;
     right: 15%;
-    top: 10%;
+    top: 5%;
+    height: 80%;
 
     .modal-content {
+      border-radius: 15px;
+      background-color: white;
+      height: 100%;
+      overflow-y: scroll;
       padding: 2rem;
     }
   }
