Create color picker

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -2,6 +2,10 @@
 
 @import 'components/navigation-component';
 
+
+@import '../modules/base/components/actual/color-input-component';
+
+
 @import 'pages/examples-advanced-page';
 
 .big-class {
