Add collapsible panel

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -4,6 +4,7 @@
 
 
 @import '../modules/base/components/actual/color-input-component';
+@import '../modules/base/components/actual/collapsible-panel-component';
 
 
 @import 'pages/examples-advanced-page';
