--- a/app/modules/base/components/actual/collapsible-panel-component.scss
+++ b/app/modules/base/components/actual/collapsible-panel-component.scss
@@ -7,11 +7,18 @@
     border-top-right-radius: 5px;
     cursor: pointer;
     font-size: 1.5rem;
-    padding: 0.5rem 1rem;
+    min-height: 2rem;
+    padding: 0.75rem 1rem;
+
+    .actions {
+      display: inline-block;
+      float: right;
+      margin-right: 2rem;
+      vertical-align: middle;
+    }
 
     .toggle-icon {
-      position: absolute;
-      right: 2rem;
+      float: right;
     }
   }
 
